# telecom-handbook

./: .gitignore  readme.md
ANT/: license  readme.md
ANT/Análise antena YAGI-UDA/: graficos_yagi.xlsx
ANT/Projeto antena YAGI-UDA/: projeto_norma688_OTIMIZADO.NEC
Antenas-e-Propagação/: readme.md
Antenas-e-Propagação/Projeto antena YAGI-UDA/: projeto_livro_ribeiro.NEC  projeto_livro_ribeiro_OTIMIZADO.NEC  projeto_normatecnica688.NEC
Arquitetura-e-Organização-de-Computadores/: readme.md
BCD/: comands.txt  compose.yaml  dd.md  links.md
BCD/modelagem/: faculdades.erdplus
BCD/notas-aula/: 00-intro.md  01-conceitos.md  02-projeto-bcd.md  ex-modelo-relacional.md  modelo-relacional.md
BCD/scripts/: jobs.sql  (+4 more)
Banco-de-Dados/: readme.md
CAN/: readme.md
Cálculo-Numérico/: readme.md
EEP/: readme.md
ELD2/: README.md
Eletrônica-Digital-II/: readme.md
Estatística-e-Probabilidade/: readme.md
Monitoria/: readme.md
POO/: interface.md  javaDOC.md  readme.md
PRE/: .gitgnore  readme.md
PRG2/projetos/projeto 4/: CMakeLists.txt  README.md  runTest.cpp
PSD/: acesso_x2go.shell
Processamento-de-Sinais/: readme.md
Processos-Estocásticos/: readme.md  requirements.txt
Programação-I/: readme.md
Programação-II/: readme.md
Programação-Orientada-a-Objetos/: draw-anotações.md  teste-unidade.md
Projeto-Integrador-I/: readme.md
RED1/: license
Redes-de-Computadores-I/: readme.md
SEG/: readme.md
SIS/: readme.md
Segurança-da-Informação/: readme.md
Sinais-e-Sistemas/: readme.md
Sistemas-Operacionais/: readme.md
psd/: convolução.txt  lab-fir
(+1143 files in other folders)
